Add in LICENSE/README

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,8 @@
 name = "ksq"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+description = "implementation of a k-2 tree"
+homepage = "https://github.com/paultag/ksq"
 
 [dependencies]
